--- a/README.textile
+++ b/README.textile
@@ -14,9 +14,15 @@ Note: Troles is a full redesign of _roles generic_ and company, using lessons le
 
 h2. Status June 2, 2011
 
-Trole and Troles are now mostly implemented. Looks like a very clean and intuitive design, and now fully documented!
+Trole and Troles are now mostly implemented. Looks like a very clean and intuitive design, and now (almost) fully documented!
 The specs are mostly in place, but there is a need to test more usage of the APIs to ensure corner cases are covered
 with ArgumentException raised and such. Also needs some debugging/finetuning in various places. 
+
+h3. Active Record specs!!!
+
+The Active Record specs infrastructure is finally set up and ready. Try: @$ rspec spec/active_record/strategies/many/string_many.rb@
+
+h3. Yard docu
 
 I'm using "Yard":http://rubydoc.info/docs/yard/file/docs/GettingStarted.md for documentation.
 
@@ -548,11 +554,11 @@ class BloggerAccount
 end  
 </pre>
 
-There will soon be a global ORM configuration options for troles, so you can do sth. like:
+There is now also a global ORM configuration options for troles, so you can do sth. like:
 
 @Troles::Common::Config.default_orm = :mongoid@
 
-And troles will use this settingin case you don't specify the orm when you configure a troles strategy.
+Troles uses this setting in case you don't specify the orm when you configure a troles strategy.
 
 <pre>
 module BaseUser
